force-app/main/default/objects/nFUSE__App_Plugin_Config__mdt/nFUSE__App_Plugin_Config__mdt.object-meta.xml
<CustomObject>
    <description>This object houses field set configuration for nFUSE configuration plug-ins.</description>
    <label>App Plugin Config</label>
    <pluralLabel>App Plugin Configs</pluralLabel>
</CustomObject>