force-app/main/default/objects/nFUSE__App_Plugin_Config__mdt/fields/nFUSE__App_Plugin__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__App_Plugin__c</fullName>
    <description>Soft reference to the plugin</description>
    <label>Plugin Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>