force-app/main/default/objects/nFUSE__App_Plugin_Config__mdt/fields/nFUSE__Field_Set__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Field_Set__c</fullName>
    <description>The field set API name.</description>
    <label>Field Set</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>