force-app/main/default/objects/nFUSE__App_Plugin_Config__mdt/fields/nFUSE__SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__SObject_Type__c</fullName>
    <description>The associated SObject type</description>
    <label>SObject Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>